# dns-firewall-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/actions/rust-ci/: action.yml
.github/workflows/: main.yml
src/: access_control_list_parser.rs  access_control_tree.rs  firewall_backend.rs  main.rs  program_config.rs  program_options.rs  protocol.rs  proxy_server.rs
src/access_control_tree/: builder.rs  matcher.rs
src/firewall_backend/: iptables.rs  noop.rs
src/proxy_server/: access_logger.rs  message_processor.rs
tests/: run_server.rs
