[package]
name = "dns-firewall"
description = "Filtering DNS proxy server with firewall integration"
version = "1.2.2"
authors = ["Nikolaus Thümmel <commit.nthuemmel@ntcomputer.de>"]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["firewall", "dns", "network", "server"]
categories = ["network-programming"]
homepage = "https://github.com/nthuemmel/dns-firewall-rust"
repository = "https://github.com/nthuemmel/dns-firewall-rust"
documentation = "https://github.com/nthuemmel/dns-firewall-rust"

[dependencies]
tokio = { version = "1.35.1", default-features = false, features = ["rt", "io-util", "net", "process", "sync", "time", "macros", "signal"] }
ipnet = "2.9.0"
hickory-proto = "0.24.0"
rand = "0.8.5"
chrono = { version = "0.4.31", default-features = false }

clap = { version = "4.4.11", features = ["derive", "env"] }

thiserror = "1.0.52"
anyhow = "1.0.76"
log = "0.4.20"
env_logger = { version = "0.10.1", default-features = false, features = ["color", "auto-color", "humantime"] }

[dev-dependencies]
maplit = "1.0.2"
assert_cmd = "2.0.12"
lazy_static = "1.4.0"
tempfile = "3.8.1"
hickory-resolver = "0.24.0"
assert_matches = "1.5.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'

[package.metadata.deb]
assets = [
    ["target/release/dns-firewall", "/usr/bin/", "755"],
    ["dist/shared/etc/dns-firewall/*", "/etc/dns-firewall/", "644"],
]
conf-files = [
    "/etc/dns-firewall/acl",
    "/etc/dns-firewall/config.env",
]
section = "net"
maintainer-scripts = "dist/debian/maintainer-scripts"
systemd-units = { unit-scripts = "dist/shared/lib/systemd/system" }
