[package]
name = "dns-firewall"
description = "Filtering DNS proxy server with firewall integration"
version = "1.2.3"
authors = ["Nikolaus Thümmel <commit.nthuemmel@ntcomputer.de>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["firewall", "dns", "network", "server"]
categories = ["network-programming"]
homepage = "https://github.com/nthuemmel/dns-firewall-rust"
repository = "https://github.com/nthuemmel/dns-firewall-rust"
documentation = "https://github.com/nthuemmel/dns-firewall-rust"

[dependencies]
tokio = { version = "1.44.1", default-features = false, features = ["rt", "io-util", "net", "process", "sync", "time", "macros", "signal"] }
ipnet = "2.11.0"
hickory-proto = "0.25.1"
rand = "0.9.0"
chrono = { version = "0.4.40", default-features = false }

clap = { version = "4.5.32", features = ["derive", "env"] }

thiserror = "2.0.12"
anyhow = "1.0.97"
log = "0.4.26"
env_logger = { version = "0.11.7", default-features = false, features = ["color", "auto-color", "humantime"] }

[dev-dependencies]
assert_cmd = "2.0.16"
lazy_static = "1.5.0"
tempfile = "3.19.1"
hickory-resolver = "0.25.1"
assert_matches = "1.5.0"

[profile.release]
lto = true
panic = 'abort'
opt-level = 's'

[package.metadata.deb]
assets = [
    ["target/release/dns-firewall", "/usr/bin/", "755"],
    ["dist/shared/etc/dns-firewall/*", "/etc/dns-firewall/", "644"],
]
conf-files = [
    "/etc/dns-firewall/acl",
    "/etc/dns-firewall/config.env",
]
section = "net"
maintainer-scripts = "dist/debian/maintainer-scripts"
systemd-units = { unit-scripts = "dist/shared/lib/systemd/system" }
